<resources>
    <string name="app_name">Bloc de notes</string>
    <string name="ultima_actualitazci">Ultima actualització</string>
    <string name="nota">Nota</string>
    <string name="actualitzar_nota">Actualitzar nota</string>
    <string name="actualitza">Actualitza</string>
    <string name="actualitzar">Actualitzar</string>
    <string name="nom">Nom…</string>
    <string name="descripci">Descripció…</string>
    <string name="guardar">Guardar</string>
</resources>