<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade_2"
    tools:context=".AddEditNoteActivity">

    <EditText
        android:id="@+id/nomNota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@color/black_shade_1"
        android:hint="@string/nom"
        android:inputType=""
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/descNota"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/guardarBttn"
        android:layout_below="@id/nomNota"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@color/black_shade_1"
        android:gravity="start|top"
        android:hint="@string/descripci"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:singleLine="false"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/guardarBttn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/black_shade_1"
        android:text="@string/guardar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/black_shade_1" />
</RelativeLayout>